--- a/PuzzleGame/PuzzleGame.Desktop.csproj
+++ b/PuzzleGame/PuzzleGame.Desktop.csproj
@@ -45,6 +45,8 @@
     <Compile Include="Program.cs" />
     <Compile Include="Game1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="GameState.cs" />
+    <Compile Include="Menu.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="MonoGame.Framework">
